.kubernetes/webserver.yml
apiVersion: v1
kind: Service
metadata:
  name: webserver-service

spec:
  # ingress 経由なのでクラスタ内に閉じておく
  type: ClusterIP
  selector:
    # これにマッチした pod に流す
    app: hello-rails-on-k8s
    server: web
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 80

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webserver-deployment
  labels:
    app: hello-rails-on-k8s

spec:
  replicas: 1
  selector:
    matchLabels:
      app: hello-rails-on-k8s
      server: web
  template:
    metadata:
      labels:
        app: hello-rails-on-k8s
        server: web
    spec:
      volumes:
        - name: sockets
          emptyDir: {}
      containers:
        - name: nginx
          image: rails_app-web-1s:latest
          imagePullPolicy: Never
          ports:
            # service から受けるポート
            - name: http
              containerPort: 80
          volumeMounts:
            - mountPath: /sockets
              name: sockets

        - name: rails
          image: rails_app-rails-1:latest
          imagePullPolicy: Never
          volumeMounts:
            - mountPath: /sockets
              name: sockets
