.kubernetes/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hello-rails-on-k8s-ingress
spec:
  rules:
  - host: hello-rails-on-k8s.local
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: webserver-service
            port:
              number: 80
